fixing spacing error

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@
   padding: 0.5rem;
 }
 
+.converter__error {
+  height: 2rem;
+}
+
 .converter__result {
   font-size: 2rem;
   margin-right: 1rem;
